# ContractOS

./: .dockerignore  .env.example  .gitignore  Dockerfile  Procfile  README.md  SPEC_KIT_SETUP.md  docker-compose.yml  entrypoint.sh  pyproject.toml  railway.toml  render.yaml
.specify/memory/: constitution.md
config/: default.yaml  default_playbook.yaml  local.yaml
demo/: copilot.html  graph.html  index.html
demo/samples/: complex_it_outsourcing.docx  manifest.json  simple_procurement.docx
docs/: ANTHROPIC_COWORK_ANALYSIS.md  EXECUTIVE_SUMMARY.md
postman/: ContractOS.postman_collection.json  ContractOS.postman_environment.json  openapi.json  run_integration_tests.sh
presentation/: DEMO_SCRIPT.md  LINKEDIN_POST.md  generate_pptx.py  index.html  linkedin_carousel.html
scripts/: generate_it_outsourcing_contract.py
spec/: README.md  architecture.md  contract-graph.md  domain-bridge.md  evaluation.md  phases.md  truth-model.md  vision.md  workspace.md
specs/: README.md
specs/001-single-contract-intelligence/: data-model-mcp.md  data-model-phase9.md  data-model.md  plan.md  quickstart-mcp.md  quickstart.md  research-mcp.md  research.md  spec.md  tasks.md
src/contractos/: cli.py  config.py
tests/: conftest.py
tests/benchmark/: test_legalbench_eval.py
tests/contract/: test_legalbench_api.py  test_workspace_api.py
tests/fixtures/: SERVICE AGREEMENT 2.docx  complex_it_outsourcing.docx  create_complex_fixtures.py  create_fixtures.py  create_huggingface_contracts.py  create_legalbench_fixtures.py  cuad_license_agreement.docx  hf_master_services_agreement.docx  hf_software_license_agreement.docx  hf_supply_chain_agreement.docx  legalbench_nda.docx  prepare_contractnli_docs.py
tests/integration/: test_api.py  test_conversation_context_endpoint.py  test_copilot_page.py  test_deep_extraction_e2e.py  test_discovery_endpoint.py  test_legalbench_extraction.py  test_multi_doc_analysis.py  test_real_nda_documents.py  test_review_endpoint.py  test_session_history.py  test_stream_endpoints.py  test_triage_endpoint.py  test_workspace_persistence.py
tests/reports/: QA_TEST_REPORT.md  qa_report_complex_it_outsourcing.json  qa_report_complex_procurement_framework.json  qa_report_nda.json  qa_report_procurement_msa.json
tests/unit/: test_alias_detector.py  test_api.py  (+40 more)
(+112 files in other folders)
